# Photogrammetry-3DTiles

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
benches/: simplify.rs  split.rs
docs/: ARCHITECTURE.md  PHOTOGRAMMETRY_FORK_PLAN.md  REFERENCE_ANALYSIS.md  ROADMAP.md  USAGE_MANUAL.md  WORKFLOW_UML.md
src/: cli.ts  config.rs  error.rs  index.ts  lib.rs  main.rs  pipeline.rs  pipeline.ts  types.ts
src/ingestion/: feature.ts  georef.rs  gltf-loader.ts  gltf_loader.rs  index.ts  mod.rs  obj-converter.ts  obj_loader.rs  ply_loader.rs  units.ts
src/tiling/: atlas_repacker.rs  glb-writer.ts  glb_writer.rs  implicit-tiling.ts  index.ts  lod.rs  mod.rs  octree.rs  octree.ts  simplifier.rs  texture-optimizer.ts  texture_compress.rs  tileset-writer.ts  tileset_writer.rs  triangle_clipper.rs
src/transform/: coordinates.rs  coordinates.ts  ecef.rs  ecef.ts  index.ts  matrix.ts  mod.rs  projection.rs  projection.ts
src/types/: draco3dgltf.d.ts  material.rs  mesh.rs  mod.rs  tile.rs
src/utils/: errors.ts  index.ts  logger.ts
tests/: integration.rs
